--- a/pkg/NEWS
+++ b/pkg/NEWS
@@ -1,3 +1,7 @@
+version 0.1.4
+- package now uses 'tinytest' for testing
+- Registered native routines as required by CRAN
+
 version 0.1.3
 - fix: 'correct_typos' crashed in presence of certain inequality rules
 - fix: 'impute_lr' gave faulty results when using 'var_group' validation 
