--- a/pkg/NEWS
+++ b/pkg/NEWS
@@ -1,3 +1,5 @@
+version 1.0.1
+
 version 1.0.0
 - In 'impute_lr' there is now an option to choose which sub-methods to use.
 - Internal: 'impute_implied' now uses lintools::compact to detect
